[Java] IDEA-385246 javac extra options completion in terminal
GitOrigin-RevId: 8e4e0e9993b29b0e1a55cb88cc19ba7e5ea63927